[gd_scene load_steps=6 format=3 uid="uid://c8fbbl4obbqsw"]

[ext_resource type="Script" path="res://Scripts/Pancake.gd" id="1_xaxf6"]

[sub_resource type="BoxShape3D" id="BoxShape3D_bo608"]
size = Vector3(2.94862, 0.385579, 2.95966)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6qc80"]
resource_local_to_scene = true
albedo_color = Color(1, 1, 0.678431, 1)

[sub_resource type="SphereMesh" id="SphereMesh_ehvnd"]

[sub_resource type="BoxShape3D" id="BoxShape3D_x8d7j"]
size = Vector3(1.13381, 5.70991, 1.19248)

[node name="Pancake" type="Node3D" groups=["PancakeClass"]]
script = ExtResource("1_xaxf6")

[node name="RigidBody3D" type="RigidBody3D" parent="."]

[node name="PancakeStatusText" type="Label3D" parent="RigidBody3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.0971265, 4.46268, 0.0131807)
text = "Takeout"
font_size = 150
outline_size = 6

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D"]
shape = SubResource("BoxShape3D_bo608")

[node name="pancakeMesh" type="MeshInstance3D" parent="RigidBody3D"]
transform = Transform3D(3, 0, 0, 0, 0.36, 0, 0, 0, 3, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_6qc80")
mesh = SubResource("SphereMesh_ehvnd")

[node name="PancakeArea" type="Node3D" parent="RigidBody3D"]
transform = Transform3D(3, 0, 0, 0, 0.36, 0, 0, 0, 3, 0, 0, 0)

[node name="Area3D" type="Area3D" parent="RigidBody3D/PancakeArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.26539, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D/PancakeArea/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_x8d7j")

[connection signal="input_event" from="RigidBody3D" to="." method="_on_rigid_body_3d_input_event"]
[connection signal="input_event" from="RigidBody3D/PancakeArea/Area3D" to="." method="_on_area_3d_input_event"]
[connection signal="mouse_entered" from="RigidBody3D/PancakeArea/Area3D" to="." method="_on_area_3d_mouse_entered"]
